--- a/style.css
+++ b/style.css
@@ -1,24 +1,30 @@
 h1 {
 	text-align: center;
   align-items: center;
+  position:absolute;
 }
 
 .center {
   display: block;
+  position:absolute;
   margin-left: auto;
   margin-right: auto;
   width: 10%;
 }
 .background {
 	background-image: "collage.jpg";
+	position:absolute;
+	z-index:0;
 }
 #game-board {
 	display: flex;
+	position:absolute;
 	align-items: center;
 	flex-direction: column;
 }
 .letter-box {
 	border: 2px solid rgb(0, 0, 0);
+	position:absolute;
 	border-radius: 3px;
 	margin: 2px;
 	font-size: 2.5rem;
@@ -32,24 +38,30 @@ h1 {
 }
 .filled-box {
 	border: 2px solid black;
+	position:absolute;
 }
 .letter-row {
 	display: flex;
+	position:absolute;
 }
 #keyboard-cont {
 	margin: 1rem 0;
 	display: flex;
+	position:absolute;
 	flex-direction: column;
 	align-items: center;
 }
 #keyboard-cont div {
 	display: flex;
+	position:absolute;
 }
 .second-row {
 	margin: 0.5rem 0;
+	position:absolute;
 }
 .keyboard-button {
 	font-size: 1rem;
+	position:absolute;
 	font-weight: 700;
 	padding: 0.5rem;
 	margin: 0 2px;
