--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 h1 {
 	text-align: center;
   align-items: center;
-  position:absolute;
+  position:relative;
   z-index:9;
 }
 
@@ -10,7 +10,7 @@ h1 {
   margin-left: auto;
   margin-right: auto;
   z-index:9;
-  position:absolute;
+  position:relative;
   width: 10%;
 }
 
@@ -19,7 +19,7 @@ h1 {
 	opacity: 1;
 	align-items: center;
 	flex-direction: column;
-	position:absolute;
+	position:relative;
 	z-index:9;
 }
 .letter-box {
@@ -34,17 +34,17 @@ h1 {
 	justify-content: center;
 	align-items: center;
 	text-transform: uppercase;
-	position:absolute;
+	position:relative;
 	z-index:9;
 }
 .filled-box {
 	border: 2px solid black;
-	position:absolute;
+	position:relative;
 	z-index:9;
 }
 .letter-row {
 	display: flex;
-	position:absolute;
+	position:relative;
 	z-index:9;
 }
 #keyboard-cont {
@@ -52,17 +52,17 @@ h1 {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	position:absolute;
+	position:relative;
 	z-index:9;
 }
 #keyboard-cont div {
 	display: flex;
-	position:absolute;
+	position:relative;
 	z-index:9;
 }
 .second-row {
 	margin: 0.5rem 0;
-	position:absolute;
+	position:relative;
 	z-index:9;
 }
 .keyboard-button {
@@ -72,6 +72,6 @@ h1 {
 	margin: 0 2px;
 	cursor: pointer;
 	text-transform: uppercase;
-	position:absolute;
+	position:relative;
 	z-index:9;
 }
