--- a/style.css
+++ b/style.css
@@ -1,16 +1,18 @@
 h1 {
 	text-align: center;
   align-items: center;
-  position:relative;
   z-index:9;
 }
-
+#background {
+	background-image: url('collage.jpg');
+	background-position: 0 0, center;
+	opacity: 0.5;
+}
 .center {
   display: block;
   margin-left: auto;
   margin-right: auto;
   z-index:9;
-  position:relative;
   width: 10%;
 }
 
@@ -19,7 +21,6 @@ h1 {
 	opacity: 1;
 	align-items: center;
 	flex-direction: column;
-	position:relative;
 	z-index:9;
 }
 .letter-box {
@@ -34,17 +35,14 @@ h1 {
 	justify-content: center;
 	align-items: center;
 	text-transform: uppercase;
-	position:relative;
 	z-index:9;
 }
 .filled-box {
 	border: 2px solid black;
-	position:relative;
 	z-index:9;
 }
 .letter-row {
 	display: flex;
-	position:relative;
 	z-index:9;
 }
 #keyboard-cont {
@@ -52,17 +50,14 @@ h1 {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	position:relative;
 	z-index:9;
 }
 #keyboard-cont div {
 	display: flex;
-	position:relative;
 	z-index:9;
 }
 .second-row {
 	margin: 0.5rem 0;
-	position:relative;
 	z-index:9;
 }
 .keyboard-button {
@@ -72,6 +67,5 @@ h1 {
 	margin: 0 2px;
 	cursor: pointer;
 	text-transform: uppercase;
-	position:relative;
 	z-index:9;
 }
