Opacity down, full background div

--- a/style.css
+++ b/style.css
@@ -11,8 +11,7 @@ h1 {
   width: 10%;
 }
 #background-img {
-	background-image: url(https://i.redd.it/wk1qfqlg2cq71.jpg);
-	opacity: 0.5;
+	background-image: url(https://i.imgur.com/rNkRwbC.jpeg);
 }
 
 #game-board {
