--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ h1 {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  font-family: Garamond, serif;
   z-index:9;
   width: 10%;
 }
